[package]
name = "wasm-canvas"
version = "0.1.0"
authors = ["Staś Małolepszy <stas@duzodobrze.pl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
opt-level = "z"
lto = true
